# stima-paper

./: .gitignore  .latexmkrc  CMakeLists.txt  LICENSE  Makefile  README.md
data/processed/: prices_2019.csv
figures/: e3_granularity.csv  e4_runtime_vs_Nsoc.csv  e4_runtime_vs_T.csv  fig_backward.tex  fig_e2_sensitivity.tex  fig_e4_runtime.tex  fig_example_day.tex  fig_lattice.tex  fig_subproblems.tex
paper/: main.fdb_latexmk  main.fls  main.tex
results/: e1_daily.csv  e1_summary.csv  e2_cdeg_sweep.csv  e3_granularity.csv  e4_runtime_vs_Nsoc.csv  e4_runtime_vs_T.csv  example_day.csv  example_day_compare.csv  example_day_greedy.csv  example_day_path.csv  example_day_vtable.csv
scripts/: run_all.sh
scripts/python/: fetch_data.py  make_figures.py  preprocess.py
src/cpp/: baselines.cpp  baselines.hpp  battery.hpp  dp_solver.cpp  dp_solver.hpp  main.cpp
